# apolo-kube-client

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yaml
apolo_kube_client/: __init__.py  _admissionregistration_k8s_io_v1.py  _apiextensions_k8s_io_v1.py  _apolo_waiters.py  _apps_v1.py  _attr.py  _base_resource.py  _batch_v1.py  _client.py  _config.py  _constants.py  _core.py  _core_v1.py  _crd_models.py  _discovery_k8s_io_v1.py  _errors.py  _networking_k8s_io_v1.py  _neuromation_io_v1.py  _rbac_authorization_k8s_io_v1.py  _resource_list.py  _rest_response.py  _storage_k8s_io_v1.py  _transport.py  _typedefs.py  _utils.py  _watch.py  apolo.py  client.py  config.py  namespace.py
apolo_kube_client/_models/: __init__.py  admissionregistration_v1_service_reference.py  admissionregistration_v1_webhook_client_config.py  apiextensions_v1_service_reference.py  apiextensions_v1_webhook_client_config.py  apiregistration_v1_service_reference.py  authentication_v1_token_request.py  base.py  base_model.py  core_v1_endpoint_port.py  core_v1_event.py  core_v1_event_list.py  core_v1_event_series.py  core_v1_resource_claim.py  discovery_v1_endpoint_port.py  events_v1_event.py  events_v1_event_list.py  events_v1_event_series.py  flowcontrol_v1_subject.py  rbac_v1_subject.py  resource_v1_resource_claim.py  storage_v1_token_request.py  utils.py  v1_affinity.py  v1_aggregation_rule.py  v1_allocated_device_status.py  v1_allocation_result.py  v1_api_group.py  v1_api_group_list.py  v1_api_resource.py  v1_api_resource_list.py  v1_api_service.py  v1_api_service_condition.py  v1_api_service_list.py  v1_api_service_spec.py  v1_api_service_status.py  v1_api_versions.py  v1_app_armor_profile.py  v1_attached_volume.py  v1_audit_annotation.py  (+681 more)
apolo_kube_client/_project_ns/: _base.py  _base_resource.py  _batch_v1.py  _client.py  _core_v1.py
apolo_kube_client/_vcluster/: __init__.py  _apps_v1_proxy.py  _attr.py  _attr_proxy.py  _batch_v1.py  _batch_v1_proxy.py  _cache.py  _client.py  _client_factory.py  _client_proxy.py  _core_v1.py  _core_v1_proxy.py  _discovery_k8s_io_v1.py  _discovery_k8s_io_v1_proxy.py  _networking_k8s_io_v1.py  _networking_k8s_io_v1_proxy.py  _neuromation_io_v1_proxy.py  _poller.py  _rbac_authorization_k8s_io_v1_proxy.py  _resource_proxy.py  _selector.py  _virt_attr.py  _virt_base_resource.py  _virt_batch_v1.py  (+3 more)
scripts/: README.md  gen.py
tests/: conftest.py  conftest_certs.py
(+808 files in other folders)
