[project]
name = "apolo-kube-client"
description = "Apolo internal client for kubernetes API"
authors = [
    {name = "apolo.us"}
]
license = {text = "proprietary"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp (>=3.12.9)",
    "yarl (>=1.20)",
    "multidict (>=6)",
    "pydantic (>=2.12.3,<3.0.0)",
    "cachetools (>=5.3.3)",
    "pyyaml (>=6.0.3,<7.0.0)",
]
dynamic = ["version"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
fix-shallow-repository = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
cryptography = "^45.0.4"
types-pyyaml = "^6.0.12.20250915"
types-cachetools = "^6.2.0.20250827"
kubernetes = "^34.1.0"
libcst = "^1.8.5"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "C90", "UP", "B", "ASYNC", "N", "A", "C4", "EM", "FA", "ICN",
    "G", "PIE", "T20", "PYI", "PT", "RET", "PTH", "T10"
]
ignore = [
  "A003",  # Class attribute "..." is shadowing a Python builtin
  "N818",
  "C901",  # ... is too complex
  "E501",  # Line too long
  "EM101",  # Exception must not use a string literal, assign to variable first
  "PT012",  # `pytest.raises()` block should contain a single simple statement
  "N802",  # Function name XXX should be lowercase
  "N815",  # Variable `apiVersion` in class scope should not be mixedCase
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
addopts = """
    -vv
    --cov-config=setup.cfg
    --cov-branch
    --cov-report term-missing:skip-covered
"""
filterwarnings = ["error"]


[tool.mypy]
strict = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true
